--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                   <div class="navbar-nav ms-auto">
                       <a class="nav-link" href="Team Project.html">팀 프로젝트</a>
                       <a class="nav-link" href="about.html">자기소개</a>
-                      <a class="nav-link" href="SECON.html">SECON 2024</a>
+                      <a class="nav-link" href="Javascript.html">Javascript</a>
                   </div>
               </div>
           </div>
