--- a/Team Project/강아지 간식.html
+++ b/Team Project/강아지 간식.html
@@ -87,7 +87,7 @@
         <span class="price" id="total-price">1,900원</span>
     </div>
     <div class="buttons">
-        <button class="buy-btn" onclick="buyNow()">구매하기</button>
+        <a href="supplies.html" class="buy-btn" onclick="buyNow()">구매하기</a>
         <a href="cart.html" class="cart-btn" onclick="addToCart()">장바구니</a>
     </div>
 </div>
